--- a/package.xml
+++ b/package.xml
@@ -89,7 +89,7 @@
 
   <!-- The export tag contains other, unspecified, tags -->
   <export>
-    <!-- Other tools can request additional information be placed here -->
+    <!-- Other tools can request additional information be laced here -->
 
   </export>
 </package>
